@@ -321,6 +321,34 @@ class TestDocumentEditView(TestCase, WagtailTestUtils):
         self.assertContains(response, self.document.usage_url)
         self.assertContains(response, 'Used 0 times')
 
+    def test_reupload_different_file_size_and_file_hash(self):
+        """
+        Checks that reuploading the document file with a different file
+        changes the file size and file hash (see #5704).
+        """
+        # Build a fake file, and create it through the admin view
+        # since self.document doesn't have a file_size set.
+        fake_file = SimpleUploadedFile('some_file.txt', b'this is the content')
+        post_data = {
+            'title': "My doc",
+            'file': fake_file,
+        }
+        self.client.post(reverse('wagtaildocs:add'), post_data)
+
+        document = models.Document.objects.get(title="My doc")
+        old_file_size, old_file_hash = document.file_size, document.file_hash
+
+        new_file = SimpleUploadedFile(document.filename, b'less content')
+
+        self.client.post(reverse('wagtaildocs:edit', args=(document.pk,)), {
+            'title': document.title, 'file': new_file,
+        })
+
+        document.refresh_from_db()
+
+        self.assertNotEqual(document.file_size, old_file_size)
+        self.assertNotEqual(document.file_hash, old_file_hash)
+
     def test_reupload_same_name(self):
         """
         Checks that reuploading the document file with the same file name
