@@ -140,22 +140,26 @@ def edit(request, document_id):
         original_file = doc.file
         form = DocumentForm(request.POST, request.FILES, instance=doc, user=request.user)
         if form.is_valid():
-            doc = form.save()
             if 'file' in form.changed_data:
+                doc = form.save(commit=False)
                 doc.file_size = doc.file.size
 
                 # Set new document file hash
                 doc.file.seek(0)
                 doc._set_file_hash(doc.file.read())
                 doc.file.seek(0)
+                doc.save()
 
-                # if providing a new document file, delete the old one.
+                # If providing a new document file, delete the old one.
                 # NB Doing this via original_file.delete() clears the file field,
                 # which definitely isn't what we want...
                 original_file.storage.delete(original_file.name)
+            else:
+                doc = form.save()
 
             # Reindex the document to make sure all tags are indexed
             search_index.insert_or_update_object(doc)
+
 
             messages.success(request, _("Document '{0}' updated").format(doc.title), buttons=[
                 messages.button(reverse('wagtaildocs:edit', args=(doc.id,)), _('Edit'))
