@@ -23,6 +23,7 @@ Changelog
  * Fix: Fixed incorrect HTML escaping of Jinja2 form templates for StructBlocks (Brady Moe)
  * Fix: All templates with wagtailsettings and modeladmin now use `block.super` for `extra_js` & `extra_css` (Timothy Bautista)
  * Fix: Layout issue when using FieldRowPanel with a heading (Andreas Bernacca)
+ * Fix: `file_size` and `file_hash` not updated when Document file changed (Andreas Bernacca)
 
 2.7 LTS (06.11.2019)
 ~~~~~~~~~~~~~~~~~~~~
